# vivid-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release-pypi.yml
scripts/: audit_private_boundary.py  scaffold_extension.py  validate_templates.py
src/vivid_inference_core/: __init__.py  authoring.py  backends.py  community_registry.py  config.py  contracts.py  custom_repo.py  model_extensions.py  plugin_manifest.schema.json  plugin_runner.py  runtime.py
src/vivid_inference_core/models/: __init__.py  base.py
templates/community-model-pack/: example_pack.py
templates/custom-python-plugin-pytorch/: main.py  manifest.json
tests/: test_authoring.py  test_community_registry.py  test_scaffold_extension.py
