[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vivid-inference-core"
version = "0.1.0"
description = "Open inference core contracts and plugin runtime for Vivid."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [{ name = "Vivid" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/vividlabs/vivid-inference-core"
Issues = "https://github.com/vividlabs/vivid-inference-core/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
